Web based cell view prototype