@@ -1,8 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
 }
 
 group 'sigbla.app'
@@ -12,16 +11,19 @@ sourceCompatibility = 11
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
-javafx {
-    version = "11.0.2"
-    modules = [ 'javafx.controls', 'javafx.web' ]
-}
+ext.ktor_version = '1.3.2'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "no.tornado:tornadofx:1.7.19"
+    implementation 'com.beust:klaxon:5.2'
+
+    compile "io.ktor:ktor-server-core:$ktor_version"
+    compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile "io.ktor:ktor-websockets:$ktor_version"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -31,10 +33,6 @@ compileKotlin {
 
 compileTestKotlin {
     kotlinOptions.jvmTarget = "11"
-}
-
-run {
-    jvmArgs("--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED")
 }
 
 mainClassName = "sigbla.app.Sigbla"
